flagger/invogue-gateway-and-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: octank-invogue-gw
  namespace: test
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: octank-invogue
  namespace: test
spec:
  hosts:
  - "*"
  gateways:
  - octank-invogue-gw
  http:
  - match:
    - uri:
        exact: /invogue
    rewrite:
      uri: / 	
    route:
    - destination:
        host: octank-invogue
